[package]
name = "rust-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
chrono = "0.4"
plotters = "0.3"
tempfile = "3.16.0"
parry2d = "0.16.0"
rapier3d = "0.21.0"
gnuplot = "0.0.37"

[dev-dependencies]
approx = "0.4"